# PIT

./: CHANGES_SUMMARY.md  Dockerfile  IMPORT_GUIDE.md  README.md  collected_data.npz  control_input_gym_test.py  environment.yml  example_new_imports.py  pyproject.toml  setup.py  test_imports.py
pit/: _compat.py  utilities.py
pit/dynamics/: __init__.py  _batching.py  dynamic_bicycle.py  kinematic_bicycle.py  kinematic_bicycle_COG.py  multi_body.py  neural_ode.py  single_track.py  single_track_drift.py  st_drift.py  unicycle.py
pit/dynamics/singletrack/: __init__.py  dynamics.py  loss.py
pit/integration/: __init__.py  _utils.py  euler.py  rk4.py
pit/parameters/: __init__.py  definitions.py  distribution.py  group.py  point.py  restricted.py
pit/utilities/: __init__.py  data.py  loss.py  visualize.py
pit/utilities/data/: __init__.py  filtering.py  formatting.py  import.py  importing.py
pit/utilities/training/: __init__.py
tests/dynamics/: test_batching.py
tests/integration/: test_time_delta.py
