[tool.poetry]
name = "pit"
version = "0.1.0"
description = ""
authors = ["Nandan Tumu <nandan.t@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
matplotlib = "^3.9.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
