[project]
name = "pit"
version = "0.1.0"
description = ""
authors = [{ name = "Nandan Tumu", email = "nandan.t@live.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "torch>=2.7.0,<3",
    "matplotlib>=3.9.2,<4",
    "pytest>=8.3.2,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
